[fix] 더미데이터 비밀번호를 hash 코드로 변경

--- a/src/main/resources/templates/board/save-form.mustache
+++ b/src/main/resources/templates/board/save-form.mustache
@@ -1,5 +1,7 @@
 {{> layout/header}}
 
+{{sessionUser.username}}
+
 <section>
 
     <form action="/board/save" method="post" enctype="application/x-www-form-urlencoded">
